# Biogas_Plant_Simulation

./: .gitattributes  CMakeLists.txt  README.md
LabVIEW/: CMakeLists.txt
LabVIEW/LabView/: Biogas_Plant.lvproj  main.vi
LabVIEW/LabView/controls/: add_button.ctl  methane_picButton.ctl  refresh_button.ctl  stop_sim_button.ctl  storage_picButton.ctl  validate_button.ctl
LabVIEW/LabView/editor/: Biogas_Plant_Strucutre_Editor.lvproj  write_png.vi
LabVIEW/LabView/elements/: hydrolysis_reactor.vi
LabVIEW/LabView/lib/headers/: libCheckpointUpdate.h  libFileFunctions.h  libOutputReader.h  libSimulationControl.h
LabVIEW/LabView/lib/libCheckpointUpdate/: dir.mnu  libCheckpointUpdate.lvlib
LabVIEW/LabView/lib/libCheckpointUpdate/VIs/: update endtime.vi  update read checkpoint.vi  update starttime.vi
LabVIEW/LabView/lib/libFileFunctions/: libFileFunctions.lvlib
LabVIEW/LabView/lib/libFileFunctions/VIs/: get header.vi  get hydrolysis PH.vi  load hydrolysis feeding.vi  merge all hydrolysis.vi  merge all methane.vi  merge one reactor.vi  remove header.vi  update hydrolysis feeding.vi  update hydrolysis inflow.vi  update initial hydrolysis inflow.vi  update methane inflow.vi  update output Files integration.vi  update output Files.vi
LabVIEW/LabView/lib/libOutputReader/: Report.html  dir.mnu  libOutputReader.lvlib
LabVIEW/LabView/lib/libOutputReader/VIs/: dir.mnu  get Number Of Output Lines.vi  get Plot String.vi  get Tree String.vi  read Output Files.vi
LabVIEW/LabView/lib/libSimulationControl/: Report.html  dir.mnu  libSimulationControl.lvlib
LabVIEW/LabView/lib/libSimulationControl/VIs/: add console output.vi  add paused time.vi  add to sim log.vi  get active element.vi  get console output.vi  get flow value.vi  get hydrolyse specification.vi  get hydrolysis fractions.vi  get iteration.vi  get merge preexisting.vi  get methane specification.vi  get num hydrolysis reactors.vi  get paused time.vi  get plant structure.vi  get sim currenttime.vi  get sim endtime.vi  get sim log.vi  get sim starttime.vi  get simulation file.vi  get working directory.vi  reset paused time.vi  set active element.vi  set console output.vi  set flow value.vi  set hydrolyse specification.vi  set hydrolysis fractions.vi  set interation log.vi  set iteration.vi  set merge preexisting.vi  set methane specification.vi  set num hydrolysis reactors.vi  set plant structure.vi  set sim currenttime.vi  set sim endtime.vi  set sim log.vi  set sim starttime.vi  set simulation file.vi  set working directory.vi
LabVIEW/LabView/lib/libSpecValiReader/: Report.html  libSpecValiReader.lvlib
LabVIEW/LabView/simulation_files/: Biogas.lua  hydro_vali.lua  hydrolysis.lua  hydrolysis_demo.lua  methane.lua  methane_demo.lua  methane_vali.lua
LabVIEW/LabView/structures/: STRUCT_2_STAGE.txt  STRUCT_2_STAGE.vi
LabVIEW/LabView/subVI/: element_editor.vi  element_editor_close.vi  element_editor_highlight_validation.vi  element_editor_hydrolysis_initial.vi  element_editor_init_tree.vi  element_editor_list_hydrolysis.vi  element_editor_load_vali.vi  element_editor_methane_initial.vi  element_editor_methane_run.vi  element_editor_validate_specs.vi  feedback_run.vi  getchildren.vi  hydrolyse_reactor_repetition_check.vi  hydrolysis_reactor_run.vi  hydrolysis_reactor_setup.vi  main_break_signal.vi  main_clear_environment.vi  main_console_output.vi  main_create_environment.vi  main_getPh.vi  main_init_element_specs.vi  main_init_panel.vi  main_init_reactor_tipstrip.vi  main_load_environment_check.vi  main_load_environtment.vi  main_prepare_run.vi  main_reset_panel.vi  main_run.vi  main_set_panel.vi  main_set_simulation_file.vi  main_update_env_tree.vi  main_write_summary.vi  methane_reactor_setup.vi  methane_reactor_update.vi  plant_pause.vi  plant_structure.vi  plot_close.vi  plot_context_menu.vi  plot_display.vi  plot_init_panel.vi  (+8 more)
LabVIEW/src/: biogas_checkpoint_wrapper.cpp  biogas_file_functions_wrapper.cpp  biogas_output_reader_wrapper.cpp  biogas_simulation_control_wrapper.cpp  biogas_spec_vali_wrapper.cpp
LabVIEW/src/file_functions/: functions.h  merge_hydrolysis.cpp  merge_hydrolysis_integration.cpp  update_feeding.cpp  update_inflow.cpp
LabVIEW/src/output_reader/: biogas_output_reader.cpp  biogas_output_reader.h
LabVIEW/src/spec_vali_reader/: biogas_spec_data_generate.cpp  biogas_spec_vali_reader.cpp  biogas_spec_vali_reader.h  biogas_spec_writer.cpp  biogas_vali_data_generate.cpp
(+1081 files in other folders)
